# TG_MediaDownloader

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_build.sh  run_dev.sh  tg_downloader.py
docs/plans/: 2026-03-15-greenvideo-queue-design.md  2026-04-02-001-refactor-plugin-system-plan.md  2026-04-02-002-feat-reload-auto-restart-plan.md
modules/: ConfigManager.py  forward_listener.py  helpers.py
modules/models/: ConfigFile.py
modules/plugins/: __init__.py  base.py  registry.py  router.py
modules/plugins/command_plugin/: command_plugin.py
modules/plugins/greenvideo_plugin/: __init__.py  greenvideo_plugin.py  playwright_downloader.py
modules/plugins/greenvideo_plugin/tests/: test_playwright_downloader.py
modules/plugins/media_plugin/: __init__.py  media_plugin.py
modules/plugins/telegram_post_plugin/: __init__.py  telegram_post_plugin.py
modules/tools/greenvideo/: README.md  playwright_downloader.py
modules/tools/greenvideo/tests/: test_playwright_downloader.py
modules/utils/: extract.py
tests/: conftest.py  test_reload_cli.py  test_smoke.py
tests/plugins/: test_base.py  test_media_plugin.py  test_router.py
