[project]
name = "tg-mediadownloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "patchright>=1.58.0",
    "pyaes==1.6.1",
    "pyroaddon==1.0.6",
    "pyrogram==2.0.106",
    "pysocks==1.7.1",
    "pytest>=8.0.0",
    "requests>=2.32.5",
    "tgcrypto==1.2.5",
]
